Hyp/ref files creation. Still needs to standarize the text. Kaldi_custom model scritps creation

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,12 @@ output*
 raw*
 transcriptions*
 scripts/history.txt
+utils/LGdir*
+utils/graph_s*
+utils/s_graph*
+utils/nivel*
+
+
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
